--- a/Task1/appsettings.json
+++ b/Task1/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=SalesOrder;Trusted_Connection=True;"
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SalesOrder;Trusted_Connection=True;"
     },
     "Logging": {
         "LogLevel": {
